--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="header__body">
-        <div class="header__logo"><img src="img/header/logo.png" alt="" /></div>
+        <div class="header__logo"><a href="#"><img src="img/header/logo.png" alt="" /></a></div>
         <div class="header__buttons">
           <button class="item-header__button-entrance"><p>Войти</p></button>
           <button class="item-header__button-basket">
