added "wrapper" in html, + added in css

--- a/index.html
+++ b/index.html
@@ -8,206 +8,216 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div class="header__body">
-        <div class="header__logo"><a href="#"><img src="img/header/logo.png" alt="" /></a></div>
-        <div class="header__buttons">
-          <button class="item-header__button-entrance"><p>Войти</p></button>
-          <button class="item-header__button-basket">
-            <img src="img/header/basket.png" alt="" />
-          </button>
-        </div>
-      </div>
-    </header>
-    <main>
-      <div class="main__body">
-        <div class="main__search-form"></div>
-        <div class="main__header"></div>
-        <div class="main__cards">
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo1.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>Макдоналдс — Газетный</h5></div>
-              <div class="item-main__subtitle"><h6>₽₽ • Бургеры</h6></div>
-              <div class="item-main__time"><p>25 - 35 мин</p></div>
-            </div>
+    <div class="wrapper">
+      <header class="header">
+        <div class="header__body">
+          <div class="header__logo">
+            <a href="#"><img src="img/header/logo.png" alt="" /></a>
           </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo2.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>DimSum &amp Co — ЦДМ</h5></div>
-              <div class="item-main__subtitle">
-                <h6>₽ • Японская • Китайская • Азиатская</h6>
-              </div>
-              <div class="item-main__time"><p>40 - 50 мин</p></div>
-            </div>
-          </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo3.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>ДвижОК — Манежная</h5></div>
-              <div class="item-main__subtitle">
-                <h6>₽ • Американская • Европейская</h6>
-              </div>
-              <div class="item-main__time"><p>35 - 45 мин</p></div>
-            </div>
-          </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo4.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>НЯ — NHA</h5></div>
-              <div class="item-main__subtitle"><h6>₽₽ • Вьетнамская</h6></div>
-              <div class="item-main__time"><p>30 - 40 мин</p></div>
-            </div>
-          </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo5.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>Точка Дзы — Цветной</h5></div>
-              <div class="item-main__subtitle"><h6>₽₽ • Вьетнамская</h6></div>
-              <div class="item-main__time"><p>40 - 50 мин</p></div>
-            </div>
-          </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo7.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>Cinnabon</h5></div>
-              <div class="item-main__subtitle">
-                <h6>₽ • Выпечка • Десерты • Капкейки</h6>
-              </div>
-              <div class="item-main__time"><p>25 - 35 мин</p></div>
-            </div>
-          </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo9.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>PIZZELOVE</h5></div>
-              <div class="item-main__subtitle"><h6>₽₽ • Пицца</h6></div>
-              <div class="item-main__time"><p>15 - 25 мин</p></div>
-            </div>
-          </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo11.png" alt="" />
-              </div>
-              <div class="item-main__title"><h5>Zю кафе — Тверская</h5></div>
-              <div class="item-main__subtitle"><h6>₽₽ • Японская</h6></div>
-              <div class="item-main__time"><p>25 - 35 мин</p></div>
-            </div>
-          </div>
-          <div class="main__column">
-            <div class="item-main">
-              <div class="item-about__icon">
-                <img src="img/photo10.png" alt="" />
-              </div>
-              <div class="item-main__title">
-                <h5>Bar BQ Cafe — Манежная</h5>
-              </div>
-              <div class="item-main__subtitle"><h6>₽₽₽ • Европейская</h6></div>
-              <div class="item-main__time"><p>30 - 40 мин</p></div>
-            </div>
+          <div class="header__buttons">
+            <button class="item-header__button-entrance"><p>Войти</p></button>
+            <button class="item-header__button-basket">
+              <img src="img/header/basket.png" alt="" />
+            </button>
           </div>
         </div>
-      </div>
-    </main>
-    <footer>
-      <div class="footer__body">
-        <div class="footer__header">
-          <div class="footer__logo">
-            <img src="img/footer/white-logo.png" alt="" />
-          </div>
-        </div>
-        <div class="footer__row">
-          <div class="footer__column">
-            <div class="links-footer">
-              <div class="links-footer__language">
-                <img src="img/footer/language.png" alt="" />
-              </div>
-              <div class="links-footer__sending">
-                <div class="links-footer__sending-logo">
-                  #<img src="img/footer/UberEats.png" alt="" />
+      </header>
+      <main class="main">
+        <div class="main__body">
+          <div class="main__search-form"></div>
+          <div class="main__header"></div>
+          <div class="main__cards">
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo1.png" alt="" />
                 </div>
-                <div class="links-footer__sending-buttons">
-                  <div class="links-footer__facebook-button">
-                    <button>
-                      <img src="img/footer/facebook.png" alt="" />
-                    </button>
+                <div class="item-main__title">
+                  <h5>Макдоналдс — Газетный</h5>
+                </div>
+                <div class="item-main__subtitle"><h6>₽₽ • Бургеры</h6></div>
+                <div class="item-main__time"><p>25 - 35 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo2.png" alt="" />
+                </div>
+                <div class="item-main__title">
+                  <h5>DimSum &amp Co — ЦДМ</h5>
+                </div>
+                <div class="item-main__subtitle">
+                  <h6>₽ • Японская • Китайская • Азиатская</h6>
+                </div>
+                <div class="item-main__time"><p>40 - 50 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo3.png" alt="" />
+                </div>
+                <div class="item-main__title"><h5>ДвижОК — Манежная</h5></div>
+                <div class="item-main__subtitle">
+                  <h6>₽ • Американская • Европейская</h6>
+                </div>
+                <div class="item-main__time"><p>35 - 45 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo4.png" alt="" />
+                </div>
+                <div class="item-main__title"><h5>НЯ — NHA</h5></div>
+                <div class="item-main__subtitle"><h6>₽₽ • Вьетнамская</h6></div>
+                <div class="item-main__time"><p>30 - 40 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo5.png" alt="" />
+                </div>
+                <div class="item-main__title"><h5>Точка Дзы — Цветной</h5></div>
+                <div class="item-main__subtitle"><h6>₽₽ • Вьетнамская</h6></div>
+                <div class="item-main__time"><p>40 - 50 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo7.png" alt="" />
+                </div>
+                <div class="item-main__title"><h5>Cinnabon</h5></div>
+                <div class="item-main__subtitle">
+                  <h6>₽ • Выпечка • Десерты • Капкейки</h6>
+                </div>
+                <div class="item-main__time"><p>25 - 35 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo9.png" alt="" />
+                </div>
+                <div class="item-main__title"><h5>PIZZELOVE</h5></div>
+                <div class="item-main__subtitle"><h6>₽₽ • Пицца</h6></div>
+                <div class="item-main__time"><p>15 - 25 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo11.png" alt="" />
+                </div>
+                <div class="item-main__title"><h5>Zю кафе — Тверская</h5></div>
+                <div class="item-main__subtitle"><h6>₽₽ • Японская</h6></div>
+                <div class="item-main__time"><p>25 - 35 мин</p></div>
+              </div>
+            </div>
+            <div class="main__column">
+              <div class="item-main">
+                <div class="item-about__icon">
+                  <img src="img/photo10.png" alt="" />
+                </div>
+                <div class="item-main__title">
+                  <h5>Bar BQ Cafe — Манежная</h5>
+                </div>
+                <div class="item-main__subtitle">
+                  <h6>₽₽₽ • Европейская</h6>
+                </div>
+                <div class="item-main__time"><p>30 - 40 мин</p></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer class="footer">
+        <div class="footer__body">
+          <div class="footer__header">
+            <div class="footer__logo">
+              <img src="img/footer/white-logo.png" alt="" />
+            </div>
+          </div>
+          <div class="footer__row">
+            <div class="footer__column">
+              <div class="links-footer">
+                <div class="links-footer__language">
+                  <img src="img/footer/language.png" alt="" />
+                </div>
+                <div class="links-footer__sending">
+                  <div class="links-footer__sending-logo">
+                    #<img src="img/footer/UberEats.png" alt="" />
                   </div>
-                  <div class="links-footer__twitter-button">
-                    <button>
-                      <img src="img/footer/twitter.png" alt="" />
-                    </button>
-                  </div>
-                  <div class="links-footer__inst-button">
-                    <button>
-                      <img src="img/footer/instagram.png" alt="" />
-                    </button>
+                  <div class="links-footer__sending-buttons">
+                    <div class="links-footer__facebook-button">
+                      <button>
+                        <img src="img/footer/facebook.png" alt="" />
+                      </button>
+                    </div>
+                    <div class="links-footer__twitter-button">
+                      <button>
+                        <img src="img/footer/twitter.png" alt="" />
+                      </button>
+                    </div>
+                    <div class="links-footer__inst-button">
+                      <button>
+                        <img src="img/footer/instagram.png" alt="" />
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="footer__column">
-            <div class="nav-footer__links">
-              <div class="nav-footer__link"><a href="">Об UberEats</a></div>
-              <div class="nav-footer__link">
-                <a href="">Станьте партнёром по доставке</a>
+            <div class="footer__column">
+              <div class="nav-footer__links">
+                <div class="nav-footer__link"><a href="">Об UberEats</a></div>
+                <div class="nav-footer__link">
+                  <a href="">Станьте партнёром по доставке</a>
+                </div>
+                <div class="nav-footer__link">
+                  <a href="">Станьте парнёром-рестораном</a>
+                </div>
               </div>
-              <div class="nav-footer__link">
-                <a href="">Станьте парнёром-рестораном</a>
+            </div>
+            <div class="footer__column">
+              <div class="nav-footer__links">
+                <div class="nav-footer__link"><a href="">Все города</a></div>
+                <div class="nav-footer__link"><a href="">Цены</a></div>
+                <div class="nav-footer__link"><a href="">Помощь</a></div>
+                <div class="nav-footer__link"><a href="">FAQs</a></div>
               </div>
             </div>
           </div>
-          <div class="footer__column">
-            <div class="nav-footer__links">
-              <div class="nav-footer__link"><a href="">Все города</a></div>
-              <div class="nav-footer__link"><a href="">Цены</a></div>
-              <div class="nav-footer__link"><a href="">Помощь</a></div>
-              <div class="nav-footer__link"><a href="">FAQs</a></div>
+          <div class="footer__button">
+            <div class="footer__column-button">
+              <div class="footer-button__as">
+                <button><img src="img/as.png" alt="" /></button>
+              </div>
+              <div class="footer-button__gp">
+                <button><img src="img/gp.png" alt="" /></button>
+              </div>
+            </div>
+          </div>
+          <div class="footer__row-help">
+            <div class="footer__nav">
+              <div class="nav-footer__links">
+                <div class="nav-footer__link">
+                  <a href="">© 2017 Uber Technologies Inc.</a>
+                </div>
+                <div class="nav-footer__link">
+                  <a href="">Обработка персональных данных</a>
+                </div>
+                <div class="nav-footer__link">
+                  <a href="">Пользовательское соглашение</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="footer__button">
-          <div class="footer__column-button">
-            <div class="footer-button__as">
-              <button><img src="img/as.png" alt="" /></button>
-            </div>
-            <div class="footer-button__gp">
-              <button><img src="img/gp.png" alt="" /></button>
-            </div>
-          </div>
-        </div>
-        <div class="footer__row-help">
-          <div class="footer__nav">
-            <div class="nav-footer__links">
-              <div class="nav-footer__link">
-                <a href="">© 2017 Uber Technologies Inc.</a>
-              </div>
-              <div class="nav-footer__link">
-                <a href="">Обработка персональных данных</a>
-              </div>
-              <div class="nav-footer__link">
-                <a href="">Пользовательское соглашение</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
