finished the "main" section in css

--- a/index.html
+++ b/index.html
@@ -24,112 +24,146 @@
       </header>
       <main class="main">
         <div class="main__body">
-          <div class="main__search-form"></div>
-          <div class="main__header"></div>
+          <div class="main__search-form">
+            <form action="" method="get">
+              <input
+                name="s"
+                placeholder="Поиск по ресторанам и кухням"
+                type="search"
+              />
+            </form>
+          </div>
+          <div class="main__header"><p>Рестораны в Москве</p></div>
           <div class="main__cards">
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo1.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo1.png" alt="" />
+                  </div>
+                  <div class="item-main__title">
+                    <h5>Макдоналдс — Газетный</h5>
+                  </div>
+                  <div class="item-main__subtitle"><h6>₽₽ • Бургеры</h6></div>
+                  <div class="item-main__time"><p>25 - 35 мин</p></div>
                 </div>
-                <div class="item-main__title">
-                  <h5>Макдоналдс — Газетный</h5>
-                </div>
-                <div class="item-main__subtitle"><h6>₽₽ • Бургеры</h6></div>
-                <div class="item-main__time"><p>25 - 35 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo2.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo2.png" alt="" />
+                  </div>
+                  <div class="item-main__title">
+                    <h5>DimSum &amp Co — ЦДМ</h5>
+                  </div>
+                  <div class="item-main__subtitle">
+                    <h6>₽ • Японская • Китайская • Азиатская</h6>
+                  </div>
+                  <div class="item-main__time"><p>40 - 50 мин</p></div>
                 </div>
-                <div class="item-main__title">
-                  <h5>DimSum &amp Co — ЦДМ</h5>
-                </div>
-                <div class="item-main__subtitle">
-                  <h6>₽ • Японская • Китайская • Азиатская</h6>
-                </div>
-                <div class="item-main__time"><p>40 - 50 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo3.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo3.png" alt="" />
+                  </div>
+                  <div class="item-main__title"><h5>ДвижОК — Манежная</h5></div>
+                  <div class="item-main__subtitle">
+                    <h6>₽ • Американская • Европейская</h6>
+                  </div>
+                  <div class="item-main__time"><p>35 - 45 мин</p></div>
                 </div>
-                <div class="item-main__title"><h5>ДвижОК — Манежная</h5></div>
-                <div class="item-main__subtitle">
-                  <h6>₽ • Американская • Европейская</h6>
-                </div>
-                <div class="item-main__time"><p>35 - 45 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo4.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo4.png" alt="" />
+                  </div>
+                  <div class="item-main__title"><h5>НЯ — NHA</h5></div>
+                  <div class="item-main__subtitle">
+                    <h6>₽₽ • Вьетнамская</h6>
+                  </div>
+                  <div class="item-main__time"><p>30 - 40 мин</p></div>
                 </div>
-                <div class="item-main__title"><h5>НЯ — NHA</h5></div>
-                <div class="item-main__subtitle"><h6>₽₽ • Вьетнамская</h6></div>
-                <div class="item-main__time"><p>30 - 40 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo5.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo5.png" alt="" />
+                  </div>
+                  <div class="item-main__title">
+                    <h5>Точка Дзы — Цветной</h5>
+                  </div>
+                  <div class="item-main__subtitle">
+                    <h6>₽₽ • Вьетнамская</h6>
+                  </div>
+                  <div class="item-main__time"><p>40 - 50 мин</p></div>
                 </div>
-                <div class="item-main__title"><h5>Точка Дзы — Цветной</h5></div>
-                <div class="item-main__subtitle"><h6>₽₽ • Вьетнамская</h6></div>
-                <div class="item-main__time"><p>40 - 50 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo7.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo7.png" alt="" />
+                  </div>
+                  <div class="item-main__title"><h5>Cinnabon</h5></div>
+                  <div class="item-main__subtitle">
+                    <h6>₽ • Выпечка • Десерты • Капкейки</h6>
+                  </div>
+                  <div class="item-main__time"><p>25 - 35 мин</p></div>
                 </div>
-                <div class="item-main__title"><h5>Cinnabon</h5></div>
-                <div class="item-main__subtitle">
-                  <h6>₽ • Выпечка • Десерты • Капкейки</h6>
-                </div>
-                <div class="item-main__time"><p>25 - 35 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo9.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo9.png" alt="" />
+                  </div>
+                  <div class="item-main__title"><h5>PIZZELOVE</h5></div>
+                  <div class="item-main__subtitle"><h6>₽₽ • Пицца</h6></div>
+                  <div class="item-main__time"><p>15 - 25 мин</p></div>
                 </div>
-                <div class="item-main__title"><h5>PIZZELOVE</h5></div>
-                <div class="item-main__subtitle"><h6>₽₽ • Пицца</h6></div>
-                <div class="item-main__time"><p>15 - 25 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo11.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo11.png" alt="" />
+                  </div>
+                  <div class="item-main__title">
+                    <h5>Zю кафе — Тверская</h5>
+                  </div>
+                  <div class="item-main__subtitle"><h6>₽₽ • Японская</h6></div>
+                  <div class="item-main__time"><p>25 - 35 мин</p></div>
                 </div>
-                <div class="item-main__title"><h5>Zю кафе — Тверская</h5></div>
-                <div class="item-main__subtitle"><h6>₽₽ • Японская</h6></div>
-                <div class="item-main__time"><p>25 - 35 мин</p></div>
-              </div>
+              </a>
             </div>
             <div class="main__column">
-              <div class="item-main">
-                <div class="item-about__icon">
-                  <img src="img/photo10.png" alt="" />
+              <a href="#" target="_blank">
+                <div class="item-main">
+                  <div class="item-about__icon">
+                    <img src="img/photo10.png" alt="" />
+                  </div>
+                  <div class="item-main__title">
+                    <h5>Bar BQ Cafe — Манежная</h5>
+                  </div>
+                  <div class="item-main__subtitle">
+                    <h6>₽₽₽ • Европейская</h6>
+                  </div>
+                  <div class="item-main__time"><p>30 - 40 мин</p></div>
                 </div>
-                <div class="item-main__title">
-                  <h5>Bar BQ Cafe — Манежная</h5>
-                </div>
-                <div class="item-main__subtitle">
-                  <h6>₽₽₽ • Европейская</h6>
-                </div>
-                <div class="item-main__time"><p>30 - 40 мин</p></div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
