added 3 punct from 4 in "footer" in css

--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
                 </div>
                 <div class="links-footer__sending">
                   <div class="links-footer__sending-logo">
-                    #<img src="img/footer/UberEats.png" alt="" />
+                    <p>#</p>
+                    <img src="img/footer/UberEats.png" alt="" />
                   </div>
                   <div class="links-footer__sending-buttons">
                     <div class="links-footer__facebook-button">
