it seems like I made an adaptive on 769px in css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo1.png" alt="" />
                   </div>
                   <div class="item-main__title">
@@ -52,7 +52,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo2.png" alt="" />
                   </div>
                   <div class="item-main__title">
@@ -68,7 +68,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo3.png" alt="" />
                   </div>
                   <div class="item-main__title"><h5>ДвижОК — Манежная</h5></div>
@@ -82,7 +82,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo4.png" alt="" />
                   </div>
                   <div class="item-main__title"><h5>НЯ — NHA</h5></div>
@@ -96,7 +96,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo5.png" alt="" />
                   </div>
                   <div class="item-main__title">
@@ -112,7 +112,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-maint__icon">
                     <img src="img/photo7.png" alt="" />
                   </div>
                   <div class="item-main__title"><h5>Cinnabon</h5></div>
@@ -126,7 +126,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo9.png" alt="" />
                   </div>
                   <div class="item-main__title"><h5>PIZZELOVE</h5></div>
@@ -138,7 +138,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo11.png" alt="" />
                   </div>
                   <div class="item-main__title">
@@ -152,7 +152,7 @@
             <div class="main__column">
               <a href="#" target="_blank">
                 <div class="item-main">
-                  <div class="item-about__icon">
+                  <div class="item-main__icon">
                     <img src="img/photo10.png" alt="" />
                   </div>
                   <div class="item-main__title">
@@ -176,69 +176,83 @@
             </div>
           </div>
           <div class="footer__row">
-            <div class="footer__column">
-              <div class="links-footer">
-                <div class="links-footer__language">
-                  <img src="img/footer/language.png" alt="" />
-                </div>
-                <div class="links-footer__sending">
-                  <div class="links-footer__sending-logo">
-                    <p>#</p>
-                    <img src="img/footer/UberEats.png" alt="" />
+            <div class="footer__wrapper-columns">
+              <div class="footer__column">
+                <div class="links-footer">
+                  <div class="links-footer__language">
+                    <img src="img/footer/language.png" alt="" />
                   </div>
-                  <div class="links-footer__sending-buttons">
-                    <div class="links-footer__facebook-button">
-                      <button>
-                        <img src="img/footer/facebook.png" alt="" />
-                      </button>
+                  <div class="links-footer__sending">
+                    <div class="links-footer__sending-logo">
+                      <a href="#"
+                        ><div>#</div>
+                        <img src="img/footer/UberEats.png" alt="" />
+                      </a>
                     </div>
-                    <div class="links-footer__twitter-button">
-                      <button>
-                        <img src="img/footer/twitter.png" alt="" />
-                      </button>
-                    </div>
-                    <div class="links-footer__inst-button">
-                      <button>
-                        <img src="img/footer/instagram.png" alt="" />
-                      </button>
+                    <div class="links-footer__sending-buttons">
+                      <div class="links-footer__facebook-button">
+                        <a>
+                          <img src="img/footer/facebook.png" alt="" />
+                        </a>
+                      </div>
+                      <div class="links-footer__twitter-button">
+                        <a>
+                          <img src="img/footer/twitter.png" alt="" />
+                        </a>
+                      </div>
+                      <div class="links-footer__inst-button">
+                        <a>
+                          <img src="img/footer/instagram.png" alt="" />
+                        </a>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="footer__column">
-              <div class="nav-footer__links">
-                <div class="nav-footer__link"><a href="">Об UberEats</a></div>
-                <div class="nav-footer__link">
-                  <a href="">Станьте партнёром по доставке</a>
-                </div>
-                <div class="nav-footer__link">
-                  <a href="">Станьте парнёром-рестораном</a>
+              <div class="footer__column">
+                <div class="nav-footer__links">
+                  <div class="nav-footer__link nav-footer__link-padding-bottom">
+                    <a href="">Об UberEats</a>
+                  </div>
+                  <div class="nav-footer__link nav-footer__link-padding-bottom">
+                    <a href="">Станьте партнёром по доставке</a>
+                  </div>
+                  <div class="nav-footer__link nav-footer__link-padding-bottom">
+                    <a href="">Станьте парнёром-рестораном</a>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="footer__column">
-              <div class="nav-footer__links">
-                <div class="nav-footer__link"><a href="">Все города</a></div>
-                <div class="nav-footer__link"><a href="">Цены</a></div>
-                <div class="nav-footer__link"><a href="">Помощь</a></div>
-                <div class="nav-footer__link"><a href="">FAQs</a></div>
+              <div class="footer__column">
+                <div class="nav-footer__links">
+                  <div class="nav-footer__link nav-footer__link-padding-bottom">
+                    <a href="">Все города</a>
+                  </div>
+                  <div class="nav-footer__link nav-footer__link-padding-bottom">
+                    <a href="">Цены</a>
+                  </div>
+                  <div class="nav-footer__link nav-footer__link-padding-bottom">
+                    <a href="">Помощь</a>
+                  </div>
+                  <div class="nav-footer__link nav-footer__link-padding-bottom">
+                    <a href="">FAQs</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
           <div class="footer__button">
             <div class="footer__column-button">
               <div class="footer-button__as">
-                <button><img src="img/as.png" alt="" /></button>
+                <a><img src="img/footer/as.png" alt="" /></a>
               </div>
               <div class="footer-button__gp">
-                <button><img src="img/gp.png" alt="" /></button>
+                <a><img src="img/footer/gp.png" alt="" /></a>
               </div>
             </div>
           </div>
           <div class="footer__row-help">
             <div class="footer__nav">
-              <div class="nav-footer__links">
+              <div class="nav-footer__links-bottom">
                 <div class="nav-footer__link">
                   <a href="">© 2017 Uber Technologies Inc.</a>
                 </div>
